# krunnercurrency

./: CMakeLists.txt  README.md  install.sh  uninstall.sh
config/: CMakeLists.txt  currencies.json
src/: CMakeLists.txt  currencyrepository.cpp  currencyrepository.h  fawazahmed0.cpp  fawazahmed0.h  krunnercurrency.cpp  krunnercurrency.h  plasma-runner-krunner_currency.json  plasma-runner-krunnercurrency.desktop
